[package]
name = "robot-simulator"
version = "0.1.0"
edition = "2021"
publish = false
# autotests = false

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { version = "4.0.0-pre.3" }
near-contract-standards = "4.0.0-pre.3"
chrono = { version = "0.4.19", features = ["unstable-locales"] }

[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "z"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true

[[test]]
name = "integration"
path = "other-tests/robot-tests.rs"